Revert "fix: main content was too tall" nvm that made it worse...
This reverts commit d23badf929e4daefd3c1f2dab7c7ac6e55d54c20.

--- a/static/main.css
+++ b/static/main.css
@@ -10,7 +10,7 @@ body {
 
 main {
     flex: 1 1 auto;
-    height: 99%;
+    height: 100%;
 }
 
 footer {
